# HuMeWoMo

./: .gitignore  README.md  demo.py  legacy_demo.py  pyproject.toml
HuMeWoMo/data_pipeline/: build_drug_graphs.py  build_enzyme_graph.py  cobra_test.py  download_BindingDB.py  filter_human_enzyme.py  flux_vis.py  gen_enzyme_graphs.py  gen_enzyme_list.py
HuMeWoMo/datasets/: binding_dataset.py  homo_binding_dataset.py
HuMeWoMo/implementation/: binding_dataset.py  homo_binding_dataset.py
HuMeWoMo/models/: homo_binding_model.py  simple_homo_binding_model.py
HuMeWoMo/pipeline/: cobra_test.py
HuMeWoMo/training/: evaluate.py  train_homo_binding.py  train_simple_homo_binding.py
data/: data.txt
data_pipeline/: build_dataset.py
wandb/: latest-run
wandb/run-20260321_233114-w5xptad4/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260321_235140-rz8fqs4j/: run-rz8fqs4j.wandb
wandb/run-20260321_235140-rz8fqs4j/files/: wandb-metadata.json
